@@ -3,7 +3,8 @@ Welcome to libpqxx, a C++ API to the PostgreSQL database management system.
 Please see the regular README for general instructions on building, installing,
 and using the library.  If you are using Cygwin, MSYS, or another Unix-like
 environment please try the Unix configuration & build procedure instead of the
-one described here.  Things are a bit more complicated for Windows systems.
+one described here; some help getting started with MSYS is given below.  Things
+are a bit more complicated for Windows systems.
 
 The only Windows compilers currently described in this document are:
 
@@ -16,37 +17,49 @@ results so any problems can be resolved and support for the compiler can be
 included in the standard libpqxx distribution.
 
 To get started quickly on a Windows system, use the command line.
-1) If you're using Visual C++, run VCVARS32.BAT to prepare the environment.
-2) Edit win32/common (if you're using Visaul C++) or win32/MinGW.mak (if you're
-   using MinGW) to reflect the correct paths to your PostgreSQL includes
-   and library files etc.
-3) Create the configuration headers include/pqxx/config-*-*.h.  These are
-   normally generated by the configure script, but this file documents the
-   procedure for systems unable to run this script.  How these files work is
-   described below.
-4) Modify the "common" makefile to suit your environment.  See "Changing the
-   makefile" below.
-5) Now "nmake /f libpqxx.mak ALL" will compile all dynamic, static, debug and 
-   release libraries. You will find them in the win32\lib directory.
+
+If you're using Visual C++:
+1) Run VCVARS32.BAT to prepare the environment.
+2) Edit win32/common to reflect the correct paths to your PostgreSQL includes
+   and library files.
+3) Create the configuration headers include/pqxx/config-*-*.h.  On a Unix-like
+   system these would be generated by the configure script.  How these files
+   work is described below; see config/sample-headers for working examples.
+4) Now "nmake /f libpqxx.mak ALL" will compile all dynamic, static, debug and 
+   release libraries. You will find them in the win32/lib directory.
+
+If you're using MinGW (but without a Unix-like environment, see above):
+1) Edit win32/MinGW.mak to reflect the correct paths to your PostgreSQL includes
+   and library files.
+2) Create the configuration headers include/pqxx/config-*-*.h.  On a Unix-like
+   system these would be generated by the configure script.  How these files
+   work is described below; see config/sample-headers for working examples.
+3) Run "make", using win32/MinGW.mak as the makefile (using a -f or /f option
+   to indicate the file, depending on whose version of Make you use).
+4) Consider installing a Unix-like environment to automate all this!
    
 After that, it is recommended that you compile and run the self-test programs
 included in the package.  Unix, Cygwin, or MSYS users simply type "make check"
-to run the entire regression test.  For Visual C++ users, the following steps
-should accomplish the same:
+to build and run the entire regression test.  For Visual C++ users, the
+following steps should accomplish the same:
 
-6) "nmake /f test.mak ALL" will compile and link all the test files. It is
+5) "nmake /f test.mak ALL" will compile and link all the test files. It is
    currently set to use the dll version of libpqxx.
-7) Make sure a PostgreSQL database is running and accessible; set up the
+6) Make sure a PostgreSQL database is running and accessible; set up the
    environment as described in README so that the test programs can access the
    database without passing a connection string.
-8) Run each of the test programs in order.  Some of them will generate lots of
+7) Run each of the test programs in order.  Some of them will generate lots of
    output, some won't produce any.  Error messages that are expected in the
    course of a normal test run are prefixed with "(Expected)" to show that they
    are not harmful.  All tests should complete successfully.
- 
+
 
 Getting Started with MinGW and MSYS
 (based on contribution by Michael J. Pedersen, 2004-08-17)
+
+MSYS is a Unix-like environment for Windows.  Once you have this installed,
+building libpqxx should be a lot more like it is under Unix except that the
+locations of libraries and such aren't sufficiently standardized.
 
 Packages to download if you don't have them already:
 1) MinGW (http://www.mingw.org/), plus any updates. It is recommended to get all
@@ -111,18 +124,24 @@ Setting up the configuration headers
 
 Several headers, normally generated by the configure script, define certain
 aspects of your compilation environment so that the library can work around
-typical compiler shortcomings, functions missing in older libpq versions, etc.
+compiler shortcomings, functions missing in older libpq versions, etc.  (Samples
+for various compiler and libpq versions can be found in the subdirectory
+config/sample-headers, so look there first.)
 
-Each of these items is a preprocessor macro that is either #define'd to some
-value or not defined at all.  Most of the items are of a Boolean nature, i.e.
-some feature or workaround is enabled if the corresponding macro is defined
-(regardless of value; 0 will work as well as 1, but a value of 1 is the
-convention) or disabled if the macro is left undefined.  Some few items require
-a meaningful value, e.g. PGSTD needs to be defined to the name of the standard
-namespace (typically std).
+Each of the aspects mentioned below is represented by a configuration item--a
+preprocessor macro that is either #define'd to some value or not defined at all.
+Most of the items are of a Boolean nature, i.e.  some feature or workaround is
+enabled if the corresponding macro is defined or disabled if the macro is left
+undefined.  Note that defining any of these macros to 0 means "true," just like
+defining it to 1 or anything else does.  The value 1 is more for convention than
+anything else.
+
+Some other items require a meaningful value however, e.g. PGSTD needs to be
+defined to the name of the standard namespace (typically std).
 
 At the time of writing, there are 3 of these configuration headers that you
-need to concern yourself about, all located in the include/pqxx subdirectory:
+need to concern yourself about, all of which should be created in the
+include/pqxx subdirectory:
 
 	config-internal-compiler.h
 	config-internal-libpq.h
@@ -152,19 +171,20 @@ the configitems file.  The normal configure script reads the list of items from
 include/pqxx/config.h.in and writes them to include/pqxx/config.h, then splits
 them up into the five smaller files as directed by the configitems database.
 
-Sample versions of these headers, for various compilers and libpq versions, can
-be found in the config/sample-headers/ directory.  Try copying the four headers
-for the compiler and libpq version most resembling your own environment to
-include/pqxx/ and, if you have any problems compiling with those, editing them
-by hand to enable or disable features that appear to be giving you trouble.
+Again, sample versions of these headers for various compilers and libpq versions
+can be found in the config/sample-headers/ directory.  Try copying the three
+headers for the compiler and libpq version most resembling your own environment
+to include/pqxx/ and, if you have any problems compiling with those, editing
+them by hand to enable or disable features that appear to be giving you trouble.
 
 
-Changing the makefile
+Changing the Visual C++ makefile
 
-There are 2 items in the makefile that may need to be changed, all have at
+There are 2 items in this makefile that may need to be changed, all have at
 least a little bit of documentation.  All these changes take place in the
-file "common" so you shouldn't get any oddities when compiling the test
-cases due to a mismatch in compiler settings.
+separate file "common", which is shared between the regular makefile and the
+makefile for the regression test, so you shouldn't get any oddities when
+compiling the test cases due to a mismatch in compiler settings.
 
 PGSQLSRC
 You will need to change this option.  While we don't actually use the source
@@ -181,20 +201,22 @@ Troubleshooting
 The biggest typical problem for Windows/VC++ users is the need to edit the
 configuration headers manually, resulting usually in compile errors, e.g. for
 missing header files.  Thus, if you get a compile error, the first places to
-look are the config-*-*.h and config-*-*.h files located in include/pqxx.
+look are the config-*-*.h and config-*-*.h files in include/pqxx.
 
 If, for instance, the error states that the header file <sys/select.h> is
 missing, you will find a configuration variable called PQXX_HAVE_SYS_SELECT_H,
 which should not be set if your system doesn't have sys/select.h.  Remove the
 line defining this variable from the configuration header where it is defined
 (see the configitems file for a list of locations) and the error should
-disappear on the next attempt.
+disappear on the next compilation attempt.
 
 If you have to edit your configuration headers, please send your results to the
 author or to the libpqxx-general mailing list so that headers corresponding to
-your environment can be included in later libpqxx releases.
+your environment can be included in later libpqxx releases.  Be sure to give a
+usable personal name so you can be properly credited in the changelog!
 
 CAUTION: DO NOT try to unset yes/no configuration items by defining their macros
-to zero.  A value of zero is counted as "yes."  If a macro is defined at all,
-that means "yes" regardless of what actual value you set.
+to zero.  A value of zero counts as "yes."  If a macro is defined at all, that
+means "yes" (or "true," or "enabled" etc.) regardless of what actual value you
+set.  To disable an item, make sure it is not defined at all.
 
