@@ -1,8 +1,12 @@
+2005-05-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ win32/INSTALL.txt:
+  - Cleaned up Windows documentation somewhat
 2005-04-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - Made inclusion of sys/select.h in tests conditional on config macro
   - Made inclusion of unistd.h in tests conditional on config macro
   - Included <ctime> rather than <time.h> in tests
+  - Added <winsock2.h> include to select()-related tests
  config/sample-headers/MinGW-3.4:
   - New, thanks Alankar Karol
   - Like gcc-3.3, but without sleep() and <sys/select.h>
